swag comment
